[tool.poetry]
name = "mvc4kivy"
version = "1.1.1"
description = "tool to create MVC project for kivy"
authors = ["Kenechukwu Akubue <kengoon19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kivy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
m4k-createproject = "mvc4kivy.create_project:main"
m4k-addview = "mvc4kivy.add_view:main"
m4k-rmview = "mvc4kivy.remove_view:main"
